--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "De Molshoop",
   "version": "1.0.0",
   "dependencies": {
-    "discord.js": "^14.8.0"
+    "discord.js": "^14.8.0",
+    "express": "^4.21.2"
   }
 }
