added authentication endpoint + refactor

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "discord.js": "^14.8.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "axios": "^1.8.2"
   }
 }
